+ ‘src/game/client/Release_swarm/client.unsuccessfulbuild’ + ‘src/game/server/Release_swarm/server.unsuccessfulbuild’ / ‘src/game/client/Release_swarm/client.lastbuildstate’ / ‘src/game/client/Release_swarm/client.pch’ / ‘src/game/client/Release_swarm/swarm_skeleton_client.log’ / ‘src/game/client/swarm_skeleton_client.vcxproj’ / ‘src/game/server/Release_swarm/server.lastbuildstate’ / ‘src/game/server/Release_swarm/server.pch’ / ‘src/game/server/Release_swarm/swarm_skeleton_server.log’ / ‘src/materialsystem/shaderlib/Release/shaderlib.lastbuildstate’ / ‘src/materialsystem/shaderlib/Release/shaderlib_swarm.log’

--- a/src/game/client/swarm_skeleton_client.vcxproj
+++ b/src/game/client/swarm_skeleton_client.vcxproj
@@ -178,11 +178,11 @@ if exist "$(TargetDir)"$(ProjectName).pdb copy "$(TargetDir)"$(ProjectName).pdb 
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>bass.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>NotSet</ShowProgress>
       <OutputFile>$(OutDir)client.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>..\..\lib\common\.;..\..\lib\public\.;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\lib\;..\..\lib\common\.;..\..\lib\public\.;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libc;libcd;libcmtd;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(IntDir)$(TargetName).pdb</ProgramDatabaseFile>
