--- a/src/game/client/swarm_skeleton_client.vcxproj
+++ b/src/game/client/swarm_skeleton_client.vcxproj
@@ -216,7 +216,7 @@ if exist "$(TargetDir)"$(ProjectName).pdb copy "$(TargetDir)"$(ProjectName).pdb 
 copy "$(TargetDir)"$(ProjectName).dll "$(appsDir)\Sourcemods\$(modName)\bin"
 if exist "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb" attrib -r "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb"
 if exist "$(TargetDir)"$(ProjectName).pdb copy "$(TargetDir)"$(ProjectName).pdb "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb"</Command>
-      <Outputs>$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb;%(Outputs)</Outputs>
+      <Outputs>..\..\..\public\bin\$(ProjectName).dll;..\..\..\public\bin\$(ProjectName).pdb;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb;%(Outputs)</Outputs>
       <Inputs>$(TargetPath) $(appsDir) $(modName) $(ProjectName)</Inputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
