--- a/src/game/client/swarm_skeleton_client.vcxproj
+++ b/src/game/client/swarm_skeleton_client.vcxproj
@@ -214,10 +214,10 @@ if exist "$(TargetDir)"$(ProjectName).pdb copy "$(TargetDir)"$(ProjectName).pdb 
     <CustomBuildStep>
       <Command>if exist "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll" attrib -r "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll"
 copy "$(TargetDir)"$(ProjectName).dll "$(appsDir)\Sourcemods\$(modName)\bin"
-copy "$(TargetDir)"$(ProjectName).dll "..\..\..\public\bin\"
+copy "$(TargetDir)"$(ProjectName).dll "..\..\..\build\CoopClub\bin\"
 if exist "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb" attrib -r "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb"
 if exist "$(TargetDir)"$(ProjectName).pdb copy "$(TargetDir)"$(ProjectName).pdb "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb"</Command>
-      <Outputs>..\..\..\public\bin\$(ProjectName).dll;..\..\..\public\bin\$(ProjectName).pdb;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb;%(Outputs)</Outputs>
+      <Outputs>..\..\..\build\CoopClub\bin\$(ProjectName).dll;..\..\..\build\CoopClub\$(ProjectName).pdb;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).pdb;%(Outputs)</Outputs>
       <Inputs>$(TargetPath) $(appsDir) $(modName) $(ProjectName)</Inputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
