/ ‘build/CoopClub/bin/server.dll’ / ‘src/game/client/Release_swarm/client.write.1.tlog’ / ‘src/game/client/Release_swarm/swarm_skeleton_client.log’ / ‘src/game/server/Release_swarm/server.write.1.tlog’ / ‘src/game/server/Release_swarm/swarm_skeleton_server.log’ / ‘src/game/server/swarm_skeleton_server.vcxproj’ / ‘src/materialsystem/shaderlib/Release/shaderlib_swarm.log’ / ‘src/materialsystem/swarmshaders/Release_dx9/game_shader_generic_deferred.write.1.tlog’ / ‘src/materialsystem/swarmshaders/Release_dx9/game_shader_generic_swarm.log’ / ‘src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj’

--- a/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
+++ b/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
@@ -126,8 +126,9 @@ if exist "$(TargetDir)"$(ProjectName).map copy "$(TargetDir)"$(ProjectName).map 
       </Message>
       <Command>if exist "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll" attrib -r "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll"
 copy "$(TargetDir)"$(ProjectName).dll "$(appsDir)\Sourcemods\$(modName)\bin"
+copy "$(TargetDir)"$ProjectName).dll "..\..\..\build\CoopClub\bin\"
 if exist "$(TargetDir)"$(ProjectName).map copy "$(TargetDir)"$(ProjectName).map "$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).map"</Command>
-      <Outputs>$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).map;%(Outputs)</Outputs>
+      <Outputs>..\..\..\build\CoopClub\bin\$(ProjectName).dll;..\..\..\build\CoopClub\bin\$(ProjectName).map;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).dll;$(appsDir)\Sourcemods\$(modName)\bin\$(ProjectName).map;%(Outputs)</Outputs>
       <Inputs>$(TargetPath) $(appsDir) $(modName) $(ProjectName)</Inputs>
     </CustomBuildStep>
     <ClCompile>
