+ ‘src/game/client/Release_swarm/CL.7232.read.1.tlog’ + ‘src/game/client/Release_swarm/CL.7232.write.1.tlog’ + ‘src/game/client/c_club_dj.h’ + ‘src/game/server/Release_swarm/CL.10444.read.1.tlog’ + ‘src/game/server/Release_swarm/CL.10444.write.1.tlog’ + ‘src/game/server/Release_swarm/CL.4332.read.1.tlog’ + ‘src/game/server/Release_swarm/CL.4332.write.1.tlog’ / ‘build/CoopClub/bin/client.dll’ / ‘build/CoopClub/bin/server.dll’ / ‘src/game/client/Release_swarm/CL.read.1.tlog’ / ‘src/game/client/Release_swarm/CL.write.1.tlog’ / ‘src/game/client/Release_swarm/cl.command.1.tlog’ / ‘src/game/client/Release_swarm/client.dll’ / ‘src/game/client/Release_swarm/client.exp’ / ‘src/game/client/Release_swarm/client.lib’ / ‘src/game/client/Release_swarm/client.pdb’ / ‘src/game/client/Release_swarm/client.write.1.tlog’ / ‘src/game/client/Release_swarm/link.read.1.tlog’ / ‘src/game/client/Release_swarm/sdk_usermessages.obj’ / ‘src/game/client/Release_swarm/swarm_skeleton_client.log’ ...

--- a/src/game/client/swarm_skeleton_client.vcxproj.filters
+++ b/src/game/client/swarm_skeleton_client.vcxproj.filters
@@ -4195,6 +4195,9 @@
     <ClInclude Include="deferred\flashlighteffect_deferred.h">
       <Filter>Source Files\deferred</Filter>
     </ClInclude>
+    <ClInclude Include="c_club_dj.h">
+      <Filter>Club</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\lib\public\bitmap.lib">
